tests/fixtures/invalid/invalid_cast.vt
fn test(): i32 {
    let a: i32 = 42;
    let b: bool = a as bool;
    return 0;
}
